[tool.poetry]
name = "country_list"
version = "1.1.0"
description = "List of all countries with names and ISO 3166-1 codes in all languages"
authors = ["Niels Lemmens <1936122+bulv1ne@users.noreply.github.com>"]
readme = "README.rst"
repository = "https://github.com/bulv1ne/country_list"
license = "MIT"
include = ["country_list/country_data/data/*/country.csv"]
exclude = ["country_list/country_data/*"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
black = "*"
isort = "*"
flake8 = "*"
coverage = "*"
mypy = "*"
pre-commit = "*"
tox = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
